# chassis

./: .gitattributes  .gitignore  .gitmessage  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  MANIFESTO.md  README.md  changelog-template.hbs  deny.toml  mkdocs.yml  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  coverage.yml  docs.yml  mkdocs-deploy.yml  msrv.yml  security.yml
chassis-core/: Cargo.toml
chassis-core/benches/: distance_bench.rs  graph_io.rs  graph_io_bench.rs  hnsw_node.rs  hnsw_node_bench.rs  link_bench.rs  link_benchmarks.rs  search_bench.rs  storage.rs
chassis-core/src/: distance.rs  header.rs  lib.rs  storage.rs
chassis-core/src/hnsw/: builder.rs  graph.rs  link.rs  mod.rs  node.rs  search.rs
chassis-core/tests/: graph_io_tests.rs  index_integration.rs  link_tests.rs  search_tests.rs  storage_tests.rs
chassis-core/tests/ui/: return_slice_then_mutate.rs  return_slice_then_mutate.stderr  slice_escapes_scope.rs  slice_escapes_scope.stderr  slice_then_commit.rs  slice_then_commit.stderr  slice_then_insert.rs  slice_then_insert.stderr  slice_then_insert_loop.rs  slice_then_insert_loop.stderr
chassis-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
chassis-ffi/examples/: Makefile  example.c
chassis-ffi/include/: chassis.h
chassis-ffi/src/: lib.rs
docs/: book.toml
docs/ADR/: 001-memory-mapped-storage.md  004-diversity-heuristic-with-lazy-cache.md  005-crash-consistent-linking.md
docs/benchmarks/: STORAGE_PRIMITIVE.md
docs/src/: MANIFESTO.md  SUMMARY.md  introduction.md
docs/src/adr/: 002-sequential-graph-construction.md  003-single-writer-concurrency.md  006-simd-acceleration.md
docs/src/architecture/: file-format.md  graph.md  indexing.md  mmap.md  overview.md  performance.md  storage.md
docs/src/dev/: benchmarking.md  building.md  setup.md  testing.md
docs/src/guide/: api-reference.md  basic-usage.md  c-api.md  getting-started.md
docs/src/specs/: README.md  binary-format.md  durability.md
pychassis/: README.md  mkdocs.yml  pyproject.toml
pychassis/chassis/: __init__.py  _ffi.py  exceptions.py  index.py  py.typed
pychassis/docs/: index.md
pychassis/docs/api/: exceptions.md  index_class.md  options.md
pychassis/docs/user-guide/: performance.md  quickstart.md
pychassis/examples/: basic_usage.py  batch_insert.py
pychassis/tests/: test_index.py
