[workspace]
resolver = "3"

members = ["chassis-core", "chassis-ffi"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Tanvi Pooranmal Meena (tanvipm19@gmail.com)"]
license = "MIT & Apache-2.0"
repository = "https://github.com/tanvincible/chassis"
description = "An embeddable, on-disk vector storage engine."

[workspace.dependencies]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

indexing_slicing = "warn"
unwrap_used = "warn"
missing_errors_doc = "warn"
todo = "deny"