[workspace]
resolver = "3"

members = ["chassis-core", "chassis-ffi"]

[workspace.package]
version = "0.5.0-alpha"
edition = "2024"
authors = ["Tanvi Pooranmal Meena (tanvipm19@gmail.com)"]
license = "MIT & Apache-2.0"
repository = "https://github.com/tanvincible/chassis"
description = "An embeddable, on-disk vector storage engine."

[workspace.dependencies]
chassis-core = { path = "./chassis-core" }

anyhow = "1.0.100"
cbindgen = "0.29.2"
criterion = "0.8.1"
fs2 = "0.4.3"
libc = "0.2.180"
memmap2 = "0.9.9"
rand = "0.9.2"
tempfile = "3.24.0"
trybuild = "1.0.114"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

indexing_slicing = "warn"
unwrap_used = "warn"
missing_errors_doc = "warn"
todo = "deny"