[package]
name = "chassis-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The foundational engine for the Chassis vector storage primitive."

[dependencies]
anyhow = { workspace = true }
fs2 = { workspace = true }
libc = { workspace = true }
memmap2 = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "storage"
harness = false

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
