[package]
name = "chassis-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The foundational engine for the Chassis vector storage primitive."

[dependencies]
anyhow = { workspace = true }
fs2 = { workspace = true }
libc = { workspace = true }
memmap2 = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "storage"
harness = false

[[bench]]
name = "hnsw_node"
harness = false

[[bench]]
name = "graph_io"
harness = false

[[bench]]
name = "link_benchmarks"
harness = false

[[bench]]
name = "search_benchmarks"
harness = false

[[bench]]
name = "distance_benchmarks"
harness = false

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
trybuild = { workspace = true }
