[package]
name = "chassis-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "The foundational engine for the Chassis vector storage primitive."

[dependencies]
anyhow = { workspace = true }
fs2 = { workspace = true }
libc = { workspace = true }
memmap2 = { workspace = true }
rand = { workspace = true }

[features]
default = []
internals = []  # Enables public access to internal modules

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "hnsw_node_bench"
harness = false

[[bench]]
name = "graph_io_bench"
harness = false

[[bench]]
name = "link_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "distance_bench"
harness = false

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
trybuild = { workspace = true }
chassis-core = { path = ".", features = ["internals"] }
