[build-system]
requires = ["setuptools>=80.10", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chassis"
version = "0.1.0"
description = "Python bindings for Chassis vector storage engine"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "Chassis Contributors"}
]
keywords = ["vector", "search", "embedding", "ann", "hnsw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "black>=26.1",
    "ruff>=0.14.14",
    "mypy>=1.19.1",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=1.0",
]

[project.urls]
Homepage = "https://github.com/tanvincible/chassis"
Documentation = "https://chassis.readthedocs.io"
Repository = "https://github.com/tanvincible/chassis"
Issues = "https://github.com/tanvincible/chassis/issues"

[tool.setuptools]
packages = ["chassis"]

[tool.setuptools.package-data]
chassis = ["py.typed"]

[tool.black]
line-length = 79
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 79
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "chassis._ffi"
# ctypes makes mypy unhappy
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    "--cov=chassis",
    "--cov-report=term-missing",
    "--cov-report=html",
]
